# tradesalsa

./: .gitignore  .ignore  Cargo.toml  README.md
configuration/: base.example.yaml  local.example.yaml  production.example.yaml
migrations/: 20240719000351_create_users_table.sql  20240721160402_create_roles.sql  20240721160407_create_user_roles.sql  20240721170003_seed_users.sql
scripts/: init_db.sh  init_redis.sh  rebuild_containers.sh  start.sh
src/: configuration.rs  constants.rs  emailer.rs  lib.rs  main.rs  startup.rs  telemetry.rs  template_helpers.rs  user.rs  utils.rs
src/domain/: mod.rs  new_user.rs  user_email.rs  user_password.rs
src/handlers/: health_check.rs  homepage.rs  mod.rs
src/routes/: auth.rs  health_check.rs  homepage.rs  mod.rs  protected.rs
templates/: 500.html  base.html  homepage.html  login.html  register.html
templates/emails/: email_verification.html
templates/partials/: _navigation.html
tests/routes/: auth.rs  health_check.rs  helpers.rs  homepage.rs  main.rs  protected.rs
