[package]
name = "tradesalsa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tradesalsa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Axum, Tower, and Tokio
axum = { version = "0.7.5", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-key-expansion", "cookie-private", "cookie-signed"] }
axum-messages = "0.6.1"
tower = "0.4.13"
tokio = { version = "1.37.0", features = ["full"] }

# Authentication
axum-login = "0.15.3"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
async-trait = "0.1.81"

# Password (uses Argon2)
password-auth = "1.0.0"
validator = { version = "0.18.1", features = ["derive"] }

# Time
time = "0.3.36"

# Configuration
config = "0.14.0"
dotenv = "0.15.0"

# Errors
anyhow = "1.0.86"
thiserror = "1.0.63"

# Serialize and Deserialize
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"

# hashing
argon2 = { version = "0.5.3", features = ["std"] }

# Database
sqlx = { version = "0.7.4", features = ["postgres", "time", "macros", "uuid", "migrate", "runtime-tokio-native-tls"] }

# ID
uuid = { version = "1.10.0", features = ["fast-rng", "macro-diagnostics", "serde", "v4"] }

# For hiding secret values in logs
secrecy = { version = "0.8.0", features = ["serde"] }

# Tracing
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }

# Frontend
tera = "1.20.0"
grass = "0.13.3"

# Emailers
lettre = { version = "0.11.7", features = ["builder", "hostname", "smtp-transport", "tokio1-native-tls"] }

[dev-dependencies]
# Part of tracing for tests
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json", "cookies", "rustls-tls"] }
fake = "2.9.2"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
